@@ -1,3 +1,9 @@
+2009-01-22  Callum McKenzie  <callum@spooky-possum.org>
+
+	* battstat-hal.c (device_added_callback): Patch from Simon Brys to
+	remove the unchecked error object. It's reuse can cause a
+	crash. Bug 568527.
+
 ==================== 2.25.3 ======================
 
 ==================== 2.25.2 ======================
